# synapse_pb

./: .gitignore  CMakeLists.txt  package.xml
proto/: CMakeLists.txt
proto/synapse_pb/: .frame.proto.swp  actuators.options  actuators.proto  altimeter.proto  battery_state.options  battery_state.proto  bezier_curve.options  bezier_curve.proto  bezier_trajectory.options  bezier_trajectory.proto  bit32_flag.proto  can.options  can.proto  clock_offset.proto  covariance3.proto  covariance6.proto  duration.proto  frame.options  frame.proto  header.options  header.proto  imu.options  imu.proto  imu_q31_array.options  imu_q31_array.proto  input.options  input.proto  led.options  led.proto  led_array.options  led_array.proto  magnetic_field.options  magnetic_field.proto  nav_sat_fix.options  nav_sat_fix.proto  nav_sat_status.proto  odometry.options  odometry.proto  point.proto  pose.proto  (+21 more)
python/: .gitignore  build.py  pyproject.toml
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
zephyr/: CMakeLists.txt  Kconfig  module.yml
