[package]
name = "synapse_pb"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
description = "Protobuf messages for CogniPilot Synapse"
homepaage = "www.cognipilot.com"
repository = "https://github.com/CogniPilot/synapse_pb.git"

[dependencies]
bytes = "1.6.0"
prost = "0.13.1"

[build-dependencies]
prost-build = "0.13.1"
